--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
           <a class="navbar-brand fs-2 fw-bold" href="#"
             >Nafiz<span class="fs-1">.</span></a
           >
-          <button class="btn whitehover btn-outline-dark text-danger me-2" type="button">
+          <button
+            class="btn whitehover btn-outline-dark text-danger me-2"
+            type="button"
+          >
             <a href="" class="fw-bold">Contact Me</a>
           </button>
         </div>
@@ -39,26 +42,26 @@
     </header>
 
     <main class="d-flex flex-md-row flex-column">
-      <section class="det-sec" style="height: 600px;">
-        <div class="details " style="height: 70%;">
+      <section class="det-sec" style="height: 600px">
+        <div class="details" style="height: 70%">
           <div class="container">
             <div class="card border-0" style="width: 100%">
               <div class="card-body d-flex flex-column gap-2 w-100">
                 <h5 class="card-title fw-bold">
                   Assalamualykum! I'm <br />
-                  <span>Nafiz Ahmed</span>
+                  <div class="name">Nafiz Ahmed</div>
                 </h5>
                 <p class="card-text w-75">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
                 <div class="button d-flex gap-3">
-                  <a href="#" class="btn text-light fw-bold py-2 px-4 oreng"
+                  <a href="#" class="btn hm text-light fw-bold py-2 px-4 oreng"
                     >Hire Me</a
                   >
-                  <a href="#" class="btn fw-bold py-2 px-4 border-orang"
-                    >Projects</a
-                  >
+                  <a href="#" class="btn b fw-bold py-2 px-4 border-orang"
+                    >Projects <i class="fa-solid fa-arrow-right ps-1 d"></i
+                  ></a>
                 </div>
                 <div class="pg mt-2">
                   <div class="bar-con w-100 rounded-pill mb-2">
@@ -79,27 +82,47 @@
             </div>
           </div>
         </div>
-        <div class="footer bg-dark" style="height: 30%;">
+        <div class="footer bg-dark" style="height: 30%">
           <div
             class="container ft d-flex w-100 justify-content-evenly h-100 py-5"
           >
-
-              <div class="w-25">
-                <span class="fw-bold text-warning fs-3">FullStack</span><br><span class="fw-bold text-light">Loading....</span>
-              </div>
-              <div>
-                <h6 class="text-light">Find Me</h6>
-                <div class="s-l d-flex gap-3">
-                  <a href=""><i class="fa-brands fa-facebook-messenger"></i></a>
-                  <a href=""><i class="fa-brands fa-instagram"></i></a>
-                  <a href=""> 018*****656</a>
-                </div>
+            <div class="w-25">
+              <span class="fw-bold text-warning fs-3">FullStack</span
+              ><br /><span class="fw-bold text-light">Loading....</span>
+            </div>
+            <div>
+              <h6 class="text-light">Find Me</h6>
+              <div class="s-l d-flex gap-3">
+                <a href=""><i class="fa-brands fa-facebook-messenger"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""> 018*****656</a>
               </div>
             </div>
-
+          </div>
         </div>
       </section>
-      <section class=" side-img h-100">
+      <section class="side-img h-100">
+        <div class="dt">
+          <div class="txt d-flex justify-content-center pt-4">
+            <h5 class="fs-5 w-75" style="color: #3F3F3F;">
+              Creat Your Site with
+              <span class="fw-bold" style="color: black"
+                >Full Responsiveness</span
+              >
+              &
+              <span class="fw-bold" style="color:black "
+                >Feathers</span
+              >
+            </h5>
+          </div>
+          <div class="icn position-relative w-100 h-100">
+            <i class="fa-brands fa-html5 animall htm "></i>
+            <i class="fa-brands fa-react animall react text-info"></i>
+            <i class="fa-brands fa-node-js text-success animall node" ></i>
+            <i class="fa-brands fa-css3-alt animall cs text-primary"></i>
+            
+          </div>
+        </div>
         <img src="images/side-img.jpg" alt="" />
       </section>
     </main>
